# dbrain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
migration/: Cargo.toml
migration/src/: cli.rs  config.rs  dashboard.rs  db.rs  main.rs  mcp.rs  memory.rs  server.rs  utils.rs
plugins/opencode/: SETUP.md  dbrain.ts  utils.ts
src/: fastify.d.ts
src/cli/: connect.ts  index.ts  init.ts  start.ts  status.ts
src/core/: config.ts  db.ts  memory.ts  models.ts
src/dashboard/: index.html  server.ts
src/dashboard/icons/: site.webmanifest
src/mcp/: server.ts
src/server/: index.ts
src/server/routes/: conversations.ts  entities.ts  facts.ts  health.ts  search.ts  workspace.ts
