[package]
name = "dbrain"
version = "0.1.0"
edition = "2021"
description = "Your distributed mind. Persistent knowledge across all your AIs."

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
